    - Swap beacon icon with module icon
    - Rename inserters to filters (since it includes loaders and splitters too)
    - Decrease generator line width
    - Create initial gui frame
    - Load the quality categories as buttons
    - Give the quality category buttons a label
    - Localize the quality category names
    - Give the quality categories a description
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2024. 12. 12
  Info:
    - Surpress ` is not a valid upgrade source entity.` messages
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2024. 11. 15
  Info:
    - Suggest the presence of newsletter-for-mods-made-by-quezler
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2024. 11. 14
  Info:
    - Require the presence of newsletter-for-mods-made-by-quezler
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024. 11. 05
  Info:
    - Hide the book from the production signal picker tab
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2024. 10. 30
  Info:
    - Fix typo making it loadable in 1.0.12
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024. 10. 30
  Info:
    - Color the quality names in their quality color
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024. 10. 30
  Info:
    - Hide from factoriopedia
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024. 10. 28
  Info:
    - Cache the item and update the thumbnail